ARS_Sanitizer_Project_ws/log/build_2024-02-12_16-45-35/energy_nav/stderr.log
  File "/home/sebab/ARS_Sanitizer_Project/ARS_Sanitizer_Project_ws/install/energy_nav/lib/python3.10/site-packages/energy_nav/example_navigation.py", line 370
    button = tk.Button(root, text=room, command=lambda room_id=idx: room_button_clicked(room_id), bg="blue", fg="white", font=font_style))
                                                                                                                                         ^
SyntaxError: unmatched ')'

